--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
 
     {% endif %}
 
-    <div class="card login-form">
+    <div class="card login-form" style="margin-left: 40% !important; margin-right: 40% !important;">
         <div class="card-body">
             <h3 class="card-title text-center">Log in</h3>
             <div class="card-text">
