--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,7 +35,7 @@
 
     <h1 style="text-align: center"> Welcome {{ user_name }}, check out your subscriptions below.</h1>
 
-    <div class="card-columns" style="margin-top: 20px !important;">
+    <div class="card-columns" style="margin-top: 20px !important;" >
 
         {% for song in subscriptions %}
 
@@ -63,7 +63,7 @@
 
 <hr>
 
-<div class="container rounded bg-white mt-5 mb-5">
+<div class="container rounded bg-white mt-5 mb-5" >
 
 
     <form method="post">
@@ -89,7 +89,21 @@
         </div>
     </form>
 
+        {% if dynamo_resp == "noResults" %}
+
+            <br>
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Oh oh.</strong> No results found with that criteria.
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <br>
+
+        {% endif %}
+
     <div class="card-columns" style="margin-top: 20px !important;">
+
 
         {% for song in songs %}
 
