--- a/templates/register.html
+++ b/templates/register.html
@@ -14,20 +14,10 @@
 <div class="global-container">
 
 
-    {% if errors.__contains__('ID') %}
+    {% if errors.__contains__('Email') %}
 
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>Error!</strong> That id already exists, please try again.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-
-    {% endif %}
-    {% if errors.__contains__('Username') %}
-
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>Error!</strong> That username already exists, please try again.
+            <strong>Error!</strong> That email already exists, please try again.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -36,8 +26,7 @@
     {% endif %}
 
 
-
-    <div class="card login-form">
+    <div class="card login-form" style="margin-left: 40% !important; margin-right: 40% !important;">
         <div class="card-body">
             <h3 class="card-title text-center">Register</h3>
             <div class="card-text">
