--- a/templates/register.html
+++ b/templates/register.html
@@ -35,14 +35,15 @@
                 <form method="post">
                     <!-- to error: add class "has-danger" -->
                     <div class="form-group">
-                        <label class="labels">User Name</label>
+                        <label>User Name</label>
                         <input type="text" name="username" class="form-control form-control-sm" value="">
-                        <label class="labels">Email</label>
+                        <label>Email</label>
                         <input type="email" name="email" class="form-control form-control-sm" value="">
 
-                        <label class="labels">Password</label>
+                        <label>Password</label>
                         <input type="password" name="password" class="form-control form-control-sm"
                                id="exampleInputPassword1" value="">
+                        <br>
                         <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
                 </form>
             </div>
